added button Roll dice and Hold

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="game-skin">
         <div class="container">
             <div class="two-player">
-                <section class="player player--0">
+                <section class="player player--0 player--active">
                     <div class="dice-turn">🎲</div>
                     <h2>PLAYER 1</h2>
                     <p class="score score--0">0</p>
