fixed some bugs and added animation

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="container">
             <div class="two-player">
                 <section class="player player--0 player--active">
-                    <div class="dice-turn">🎲</div>
+                    <div class="dice-turn diceTurn--0">🎲</div>
                     <h2>PLAYER 1</h2>
                     <p class="score score--0">0</p>
                     <div class="current-score-box">
@@ -27,7 +27,7 @@
                     </div>
                 </section>
                 <section class="player player--1">
-                    <div class="dice-turn">🎲</div>
+                    <div class="dice-turn diceTurn--1">🎲</div>
                     <h2>PLAYER 2</h2>
                     <p class="score score--1">0</p>
                     <div class="current-score-box">
