Added target score selection for the game

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
 
                     <div class="winning-score">
                         <p class="winningScoreNumber">50</p>
-                        <input type="radio" name="winningScore" />
+                        <input type="radio" value="50" name="winningScore" />
                         <p class="winningScoreNumber">100</p>
-                        <input type="radio" name="winningScore" />
+                        <input type="radio" value="100" name="winningScore" />
                     </div>
                 </div>
             </section>
