Added rule button

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <section class="middle-section">
                 <img src="dice-1.png" class="dice-image" />
                 <button class="btn btn-new">🕹️NEW GAME</button>
-                <!-- //fa-fade -->
+                <button class="btn btn-rule">📜RULE</button>
                 <button class="btn btn-rollDice">
             <i class="fa-solid fa-arrows-rotate"></i> ROLL DICE
           </button>
@@ -49,7 +49,7 @@
 
                     <div class="winning-score">
                         <p class="winningScoreNumber">50</p>
-                        <input type="radio" value="50" name="winningScore" />
+                        <input type="radio" value="50" name="winningScore" checked="checked" />
                         <p class="winningScoreNumber">100</p>
                         <input type="radio" value="100" name="winningScore" />
                     </div>
