--- a/index.html
+++ b/index.html
@@ -70,6 +70,13 @@
             </div>
             <div class="overlay hidden"></div>
         </div>
+        <div>
+            <p class="footer">
+                This project was coded by Janis Chan and is open-sourced on
+                <a href="https://github.com/Janisgee/pig-dice-game">GitHub</a> and hosted on
+                <a href="https://pig-dice-game01.netlify.app">Netlify</a>
+            </p>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
